# graphos-javad

./: .gitignore  README.md
Omix++/: CMakeLists.txt  Makefile  commons.py  experiment.csv  experiment.py
Omix++/App/: AVL.cpp  AVL.h  App.cpp
Omix++/App/OMAP/: RAMStoreEnclaveInterface.h
Omix++/Enclave/: Enclave.config.xml  Enclave.cpp  Enclave.edl
Omix++/Enclave/OMAP/: AVLTree.cpp  AVLTree.h  Bid.h  OMAP.cpp  OMAP.edl  OMAP.h  ORAM.cpp  ORAM.hpp  ORAMEnclaveInterface.cpp  ORAMEnclaveInterface.h
Omix++/cmake/: FindSGX.cmake
Omix++/sgxssl/: check_sum_openssl.txt
Omix++/sgxssl/Linux/sgx/: osslverstr.h
Omix++/sgxssl/Linux/sgx/libsgx_tsgxssl/: sgx_tsgxssl_t.h
Omix++/sgxssl/Linux/sgx/test_app/: TestApp
Omix++/sgxssl/openssl_source/openssl-3.0.10/: Makefile  Makefile.in  configdata.pm
Omix++/sgxssl/openssl_source/openssl-3.0.10/crypto/: buildinf.h  libcrypto-lib-asn1_dsa.d  libcrypto-lib-bsearch.d  libcrypto-lib-context.d  libcrypto-lib-core_algorithm.d  libcrypto-lib-core_fetch.d  libcrypto-lib-core_namemap.d  libcrypto-lib-cpt_err.d  libcrypto-lib-cpuid.d  libcrypto-lib-cryptlib.d  libcrypto-lib-ctype.d  libcrypto-lib-cversion.d  libcrypto-lib-der_writer.d  libcrypto-lib-ebcdic.d  libcrypto-lib-ex_data.d  libcrypto-lib-getenv.d  libcrypto-lib-info.d  libcrypto-lib-init.d  libcrypto-lib-initthread.d  libcrypto-lib-mem.d  libcrypto-lib-mem_sec.d  libcrypto-lib-o_dir.d  libcrypto-lib-o_fopen.d  libcrypto-lib-o_init.d  libcrypto-lib-o_str.d  libcrypto-lib-o_time.d  libcrypto-lib-packet.d  libcrypto-lib-param_build.d  libcrypto-lib-param_build_set.d  libcrypto-lib-params.d  libcrypto-lib-params_dup.d  libcrypto-lib-passphrase.d  (+17 more)
(+891 files in other folders)
